Updated code to save trained model.

--- a/Handwritten_Character_Recognizer_ANN.ipynb
+++ b/Handwritten_Character_Recognizer_ANN.ipynb
@@ -47,7 +47,7 @@
         "import zipfile\n",
         "print('Packages imported in', time.time()-start, 'seconds...')"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -62,18 +62,20 @@
       "metadata": {
         "id": "nzUUBqMSrxx8",
         "colab_type": "code",
+        "outputId": "4f65d4f2-ca0a-4b83-e026-cdbbef6f1400",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 366
-        },
-        "outputId": "4f65d4f2-ca0a-4b83-e026-cdbbef6f1400"
+        }
       },
       "cell_type": "code",
       "source": [
+        "# Do not run this cell if dataset is already present in folder\n",
+        "\n",
         "!pip install gdown\n",
         "!gdown https://drive.google.com/uc?id=1JLBWOyxNWDxUnIarBVMdAv460z1ICkuh"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,13 +158,17 @@
       },
       "cell_type": "code",
       "source": [
+        "# Insert absolute path of the directory in which dataset is present here, if applicable\n",
+        "\n",
+        "abs_path = ''\n",
+        "\n",
         "start = time.time()\n",
-        "with zipfile.ZipFile('nist_by_class.zip', 'r') as zip_ref:\n",
-        "    zip_ref.extractall('nist_by_class')\n",
+        "with zipfile.ZipFile(abs_path+'nist_by_class.zip', 'r') as zip_ref:\n",
+        "    zip_ref.extractall(abs_path+'nist_by_class')\n",
         "print('Dataset unzipped in', time.time()-start, 'seconds...')\n",
-        "!rm 'nist_by_class.zip'"
+        "# !rm 'nist_by_class.zip'"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -211,7 +217,7 @@
         "\n",
         "for i in class_info:\n",
         "    print(class_info[i], '\\t', time.time()-start, 'seconds', end='\\t')\n",
-        "    path = 'nist_by_class/' + class_info[i][0] + '/train_' + class_info[i][0]\n",
+        "    path = abs_path + 'nist_by_class/' + class_info[i][0] + '/train_' + class_info[i][0]\n",
         "    count = 0\n",
         "    for img in os.listdir(path):\n",
         "        im = Image.open(path + '/' + img).convert('L').crop((32, 32, 96, 96))\n",
@@ -228,7 +234,7 @@
         "#     !rm -rf class_info[i][0]\n",
         "    total_count += count\n",
         "\n",
-        "!rm -rf 'by_class'\n",
+        "# !rm -rf 'by_class'\n",
         "data = np.array(data_list, dtype='float32')\n",
         "\n",
         "print('Total number of samples =', total_count)\n",
@@ -340,59 +346,12 @@
         "model.add(layer)\n",
         "model.add(tf.keras.layers.Dense(192))\n",
         "model.add(tf.keras.layers.Dense(128))\n",
-        "model.add(tf.keras.layers.Dense(62, activation='softmax'))"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "0e-qVqXMzpji",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "model.compile(optimizer='adam', loss='categorical_crossentropy')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "_x1EOewgzpjt",
-        "colab_type": "code",
-        "outputId": "9caaa3bc-b8ce-4867-8bde-c7e8970b1319",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
+        "model.add(tf.keras.layers.Dense(62, activation='softmax'))\n",
+        "model.compile(optimizer='adam', loss='categorical_crossentropy')\n",
         "model.summary()"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "_________________________________________________________________\n",
-            "Layer (type)                 Output Shape              Param #   \n",
-            "=================================================================\n",
-            "dense (Dense)                (None, 256)               1048832   \n",
-            "_________________________________________________________________\n",
-            "dense_1 (Dense)              (None, 192)               49344     \n",
-            "_________________________________________________________________\n",
-            "dense_2 (Dense)              (None, 128)               24704     \n",
-            "_________________________________________________________________\n",
-            "dense_3 (Dense)              (None, 62)                7998      \n",
-            "=================================================================\n",
-            "Total params: 1,130,878\n",
-            "Trainable params: 1,130,878\n",
-            "Non-trainable params: 0\n",
-            "_________________________________________________________________\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "metadata": {
@@ -402,19 +361,7 @@
       },
       "cell_type": "code",
       "source": [
-        "Y_train = tf.keras.utils.to_categorical(Y_train)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "A6c-qHSCzpkC",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
+        "Y_train = tf.keras.utils.to_categorical(Y_train)\n",
         "# X_train = X_train.astype('float32') / 255.0"
       ],
       "execution_count": 0,
@@ -429,7 +376,7 @@
       },
       "cell_type": "code",
       "source": [
-        "model.fit(X_train, Y_train)"
+        "model.fit(X_train, Y_train, epochs=5)"
       ],
       "execution_count": 0,
       "outputs": [
@@ -457,13 +404,32 @@
     },
     {
       "metadata": {
+        "id": "TpiY4rHWKyWb",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "start = time.time()\n",
+        "loss, acc = new_model.evaluate(X_test, Y_test)\n",
+        "print('Accuracy on test set :', acc*100, '%')\n",
+        "print('Loss on test set :', loss')\n",
+        "print('Model evaluated on test set in', time.time()-start, 'seconds...')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
         "id": "rvrBeQ-dYDyW",
         "colab_type": "code",
         "colab": {}
       },
       "cell_type": "code",
       "source": [
-        "model."
+        "start = time.time()\n",
+        "model.save('./saved_model/HCRANN.h5')\n",
+        "print('Model saved to disk in', time.time()-start, 'seconds...')"
       ],
       "execution_count": 0,
       "outputs": []
